--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -7,6 +7,7 @@ body {
 div.container {
 	margin: auto;
 	margin-top: 30px;
-	margin-bottom 30px;
+	margin-bottom: 30px;
 	max-width: 1000px;
+	position: relative;
 }
