--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -5,3 +5,25 @@ section.filters {
 	border: 1px solid #DDDDDD;
 	border-radius: 4px;
 }
+
+section.filters button {
+	float: right;
+	font-size: 18px;
+	background-color: #FF5A5F;
+	color: #FFFFFF;
+	height: 48px;
+	width: 20%;
+	align-items: center;
+	border-radius: 4px;
+	border: none;
+	position: absolute;
+	right: 30px;
+	top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+	text-align: center;
+}
+
+button:hover {
+	opacity: .9;
+}
